--- a/main.html
+++ b/main.html
@@ -1,11 +1,15 @@
 <html>
     <head>
-        <title>El titulo de la pagina principal es este</title>
+        <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Articulo para la venta</h1>
-        <p>Este es el parrafo e inicio para la venta</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+            
+            <p>y Este es el parrafo de inicio donde vamos a explicar las cosas increibles que se puede hacer con ramas</p>
+                </div>
     </body>
 
 </html>
